--- a/style.css
+++ b/style.css
@@ -74,3 +74,23 @@ body {
 .color-contact {
     color: #F25705;
 }
+
+.color-apollo8a {
+    color: #0433BF;
+}
+
+.color-apollo8b {
+    color: #032CA6;
+}
+
+.color-apollo8c {
+    color: #049DBF;
+}
+
+.color-apollo8d {
+    color: #02731E;
+}
+
+.color-apollo8f {
+    color: #D90404;
+}
